# txt_to_epub

./: .gitignore  LICENSE  README.md  pre-commit  pyproject.toml
src/: main.py
src/core/converter/: __init__.py  convert.py  worker.py
src/lib/: logger.py  parser.py  types.py
tests/: conftest.py  test_convert_integration.py  test_parser.py  test_worker.py
